// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-1t2fm6u-Text"
  >
    Test
  </div>
</div>
`;

exports[`Text component should match snapshot with default props 1`] = `
<div>
  <div
    class="css-1x18leo-Text"
  >
    test
  </div>
</div>
`;
